  to have a ``ValPtr`` return type and the implementation should return a ``Val::nil``,
  but the Zeek script function signature will have a void return type.

- The ``&on_change`` attribute for tables or sets now accepts variable argument functions.

- Added the ``modulo`` BiF, which behaves differently from Zeek's ``%`` operator
  for negative numbers.

Changed Functionality
---------------------

- The ``to_subnet()`` built-in function's parsing of IPv6 subnets was changed
  to align with how IPv6 subnet literals are parsed in Zeek scripts. Previously,
  any subnet containing the ``::ffff:0:0/96`` IPv4-mapped prefix would produce
  an IPv4 subnet, even if provided prefix was shorter than the required 96 bits.

  Internally, the behavior of the ``IPPrefix::ConvertString()`` API was changed
  to accommodate for this.

- The ``policy/frameworks/analyzer/detect-protocols`` script now respects analyzer
  violations to suppress ``Server_Found`` or ``Protocol_Found`` for connections which
  first had an analyzer confirmation, but later a analyzer violation happened. Previously,
  Zeek would report a HTTP server when a client issued a HTTP request to an SSH servers,
  or SSL when a client sent a TLS Client Hello to a HTTP server.

Deprecated Functionality
------------------------

Zeek 8.1.0
==========

We'd like to thank Andrew Raffman (@andyraf), @arm7mm, Artyom Kalabukhov (@predator89090),
Benjamin Grap (@blightzero), @biswajitutil, @cccs-jsjm, @chrisjlly, Craig P
(@multicast-bytes), @DigiAngel, Mike Dopheide (@dopheide-esnet), Edoardo Mich
(@edoardomich), @franky-m, Fupeng Zhao (@AmazingPP), Jan Grashöfer (@J-Gras), Klemens
Nanni (@klemens-ya), Klemens Nanni (@klemensn), @kshitiz56, Mark Overholser
(@markoverholser), Mohan Dhawan (@Mohan-Dhawan), Peter Cullen (@pbcullen), RyugaXhypeR
(@RyugaXhypeR), Seth Hall (@sethhall), Yacin Nadji (@ynadji), Zhang Liang (@JosenLiang),
Zach Robinette (@zrobinette12) and @zzzdong for their contributions to this release.
